chore: project is now licensed under MIT

--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
     version="0.2.0">
     <name>Ping</name>
     <description>Cordova Ping Plugin</description>
-    <license>Apache 2.0</license>
+    <license>MIT</license>
     <keywords>cordova,ping</keywords>
     <repo>https://github.com/t1st3/cordova-plugin-ping.git</repo>
     <issue>https://github.com/t1st3/cordova-plugin-ping/issues</issue>
