--- a/tests/plugin.xml
+++ b/tests/plugin.xml
@@ -4,7 +4,7 @@
     id="cordova-plugin-ping-tests"
     version="0.2.0">
     <name>Ping Tests</name>
-    <license>Apache 2.0</license>
+    <license>MIT</license>
 
     <js-module src="tests.js" name="tests">
     </js-module>
