--- a/plugin.xml
+++ b/plugin.xml
@@ -1,20 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-  <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="cordova-plugin-ping"
-    version="0.3.1">
+    id="cordova-plugin-networkinterface"
+    version="1.0.8">
+
     <name>Ping</name>
-    <description>Cordova Ping Plugin</description>
+    <description>
+    	Cordova Ping Plugin
+	</description>
+
     <license>MIT</license>
+
     <keywords>cordova,ping</keywords>
-    <repo>https://github.com/t1st3/cordova-plugin-ping.git</repo>
-    <issue>https://github.com/t1st3/cordova-plugin-ping/issues</issue>
+
+	<engines>
+		<engine name="cordova" version="&gt;=3.1.0" />
+	</engines>
 
     <js-module src="www/ping.js" name="ping">
-      <clobbers target="Ping" />
+    	<clobbers target="Ping" />
     </js-module>
 
-    <platform name="android">
+    <!-- ios -->
+    <platform name="ios">
+        <config-file target="config.xml" parent="/*">
+            <feature name="Ping">
+                <param name="ios-package" value="CDVPing" onload="true" />
+            </feature>
+        </config-file>
+
+        <header-file src="src/ios/CDVPing.h" />
+        <source-file src="src/ios/CDVPing.m" />
+       <header-file src="src/ios/SimplePing.h"/>
+        <source-file src="src/ios/SimplePing.m"/>
+         
+    </platform>
+
+	 <platform name="android">
       <config-file target="res/xml/config.xml" parent="/*">
         <feature name="Ping">
           <param name="android-package" value="org.tiste.cordova.ping.Ping"/>
@@ -22,4 +45,5 @@
       </config-file>
       <source-file src="src/android/Ping.java" target-dir="src/org/tiste/cordova/ping"/>
     </platform>
-  </plugin>
+
+</plugin>
